--- a/css/form-border.css
+++ b/css/form-border.css
@@ -1,8 +1,8 @@
 .form-control:not(.fc-alt) {
     border: 1px solid #d9d9d9;
     border-radius: 3px;
-    /*padding: 0 10px 0 40px;*/
     padding: 5px 10px;
+    transition: border .2s ease-in-out,background .2s ease-in-out,box-shadow .2s ease-in-out;
 }
 
 .input-group-lg>.input-group-addon {
@@ -10,10 +10,13 @@
 }
 
 .form-control:focus {
-    border-color: #a6a6a6;
+    border-color: #5cadff;
     outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+    box-shadow: 0 0 0 2px rgba(51,153,255,.2) !important;
+}
+
+.form-control {
+    box-shadow: none !important;
 }
 
 .fg-line:not([class*=has-]):after {
@@ -52,6 +55,16 @@ html:not(.ie9) .select:before {
     top:1px;
 }
 
+.input-group-btn .btn {
+    padding:7px 15px;
+}
+
+.input-group-btn .btn:focus,
+.input-group-btn .btn:hover {
+    color:#5E5E5E;
+    border-color: #bfcbd9;
+}
+
 .bootstrap-select>.btn-default,
 .bootstrap-select>.btn-default:hover,
 .bootstrap-select>.btn-default:focus,
@@ -65,7 +78,6 @@ html:not(.ie9) .select:before {
 .open > .dropdown-toggle.btn-default:hover {
     border-color: #d9d9d9;
 }
-
 
 .bootstrap-select.btn-group .dropdown-toggle .filter-option {
     padding-left: 10px;
@@ -123,3 +135,114 @@ html:not(.ie9) .select:before {
     pointer-events: none;
     z-index: 5
 }
+
+.fg-line.with-icon .form-control, .fg-line.with-icon .zmdi {
+    -webkit-transition: all;
+    -o-transition: all;
+    transition: all;
+    -webkit-transition-duration: .3s;
+    transition-duration: .3s;
+}
+
+.fg-line.with-icon .form-control {
+    background-repeat: no-repeat;
+    background-position: left center;
+    padding-left: 30px;
+    background-color: transparent;
+}
+
+.fg-line.with-icon .zmdi {
+    position: absolute;
+    /* left: 0; */
+    left: 10px;
+    bottom: 9px;
+    font-size: 18px;
+    color: #BFACA5;
+}
+
+.fg-line.with-icon .form-control:focus {
+    padding: 0 30px 0 10px;
+}
+
+.fg-line.with-icon .form-control:focus + .zmdi {
+    left: calc(100% - 25px);
+}
+
+.form-control-feedback {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+}
+
+.has-feedback label~.form-control-feedback {
+    top: 23px;
+}
+
+
+.form-group.form-item .control-label {
+    text-align: right;
+    vertical-align: middle;
+    float: left;
+    line-height: 1;
+    padding: 10px 12px 10px 0;
+    box-sizing: border-box;
+}
+
+.form-inline .form-item .control-label {
+    float: none;
+    display: inline-block;
+}
+
+.form-inline .form-item {
+    display: inline-block;
+    margin-right: 12px;
+    vertical-align: top;
+}
+/*.i-form .form-group .control-label {
+    vertical-align: middle;
+    float: left;
+    line-height: 1;
+    padding: 10px 24px 10px 0;
+    box-sizing: border-box;
+}
+
+.form-inline.i-form .form-group .control-label {
+    float: none;
+    display: inline-block;
+}
+
+.form-inline.i-form .form-group {
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: top;
+}*/
+
+.form-item-content {
+    position: relative;
+}
+
+.form-inline .form-item-content {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.label-left .form-group .control-label {
+    text-align: left;
+}
+
+.checkbox-group, .radio-group {
+    padding-top: 8px;
+}
+
+.form-group.is-required .control-label:before {
+    content: "*";
+    color: #ff4949;
+    margin-right: 4px;
+}
+
+.help-block {
+    margin-bottom: 0;
+}
+
+
+
