--- a/css/pre-loader.css
+++ b/css/pre-loader.css
@@ -181,3 +181,107 @@ html:not(.ismobile) .page-loader .preloader p {
         stroke: #FFC107
     }
 }
+
+/**** loading style ****/
+.el-loading-mask {
+    position: absolute;
+    z-index: 10000;
+    background-color: hsla(0,0%,100%,.9);
+    margin: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transition: opacity .3s
+}
+
+.el-loading-mask.is-fullscreen {
+    position: fixed
+}
+
+.el-loading-mask.is-fullscreen .el-loading-spinner {
+    margin-top: -25px
+}
+
+.el-loading-mask.is-fullscreen .el-loading-spinner .circular {
+    width: 50px;
+    height: 50px
+}
+
+.el-loading-spinner {
+    top: 50%;
+    margin-top: -21px;
+    width: 100%;
+    text-align: center;
+    position: absolute
+}
+
+.el-loading-spinner .el-loading-text {
+    color: #20a0ff;
+    margin: 3px 0;
+    font-size: 14px
+}
+
+.el-loading-spinner .circular {
+    width: 42px;
+    height: 42px;
+    animation: loading-rotate 2s linear infinite
+}
+
+.el-loading-spinner .path {
+    animation: loading-dash 1.5s ease-in-out infinite;
+    stroke-dasharray: 90,150;
+    stroke-dashoffset: 0;
+    stroke-width: 2;
+    stroke: #20a0ff;
+    stroke-linecap: round
+}
+
+.loading-fade-enter,.loading-fade-leave-active {
+    opacity: 0
+}
+
+@keyframes loading-rotate {
+    to {
+        transform: rotate(1turn)
+    }
+}
+
+@keyframes loading-dash {
+    0% {
+        stroke-dasharray: 1,200;
+        stroke-dashoffset: 0
+    }
+
+    50% {
+        stroke-dasharray: 90,150;
+        stroke-dashoffset: -40px
+    }
+
+    to {
+        stroke-dasharray: 90,150;
+        stroke-dashoffset: -120px
+    }
+}
+
+.ivu-loading-bar {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2000
+}
+
+.ivu-loading-bar-inner {
+    transition: width .2s linear
+}
+
+.ivu-loading-bar-inner-color-primary {
+    background-color: #39f
+}
+
+.ivu-loading-bar-inner-failed-color-error {
+    background-color: #f30
+}
+
