--- a/css/elem-table.css
+++ b/css/elem-table.css
@@ -235,14 +235,23 @@
     margin-top: -5px
 }
 
+.el-table__expand-icon>.zmdi {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -5px;
+    margin-top: -8px;
+    font-size: 18px;
+}
+
 .el-table__expand-icon--expanded {
     transform: rotate(90deg)
 }
 
 .el-table__expanded-cell {
     padding: 20px 50px;
-    background-color: #fbfdff;
-    box-shadow: inset 0 2px 0 #f4f4f4
+    background-color: #f5f5f5;
+    box-shadow: inset 0 1px 0 #f5f5f5;
 }
 
 .el-table__expanded-cell:hover {
