--- a/css/table.css
+++ b/css/table.css
@@ -36,7 +36,7 @@ td, th {
     background-color: #f3f3f3
 }
 
-.table-condensed > tbody > tr > td, .table-condensed > tbody > tr > th, .table-condensed > tfoot > tr > td, .table-condensed > tfoot > tr > th, .table-condensed > thead > tr > td, .table-condensed > thead > tr > th {
+.table-sm > tbody > tr > td, .table-sm > tbody > tr > th, .table-sm > tfoot > tr > td, .table-sm > tfoot > tr > th, .table-sm > thead > tr > td, .table-sm > thead > tr > th {
     padding: 10px
 }
 
@@ -65,43 +65,53 @@ table td[class*=col-], table th[class*=col-] {
 }
 
 .table > tbody > tr.active > td, .table > tbody > tr.active > th, .table > tbody > tr > td.active, .table > tbody > tr > th.active, .table > tfoot > tr.active > td, .table > tfoot > tr.active > th, .table > tfoot > tr > td.active, .table > tfoot > tr > th.active, .table > thead > tr.active > td, .table > thead > tr.active > th, .table > thead > tr > td.active, .table > thead > tr > th.active {
-    background-color: #FFFCBE
+    /*background-color: #FFFCBE;*/
+    background-color: #f6f6f6;
 }
 
 .table-hover > tbody > tr.active:hover > td, .table-hover > tbody > tr.active:hover > th, .table-hover > tbody > tr:hover > .active, .table-hover > tbody > tr > td.active:hover, .table-hover > tbody > tr > th.active:hover {
-    background-color: #fffba4
+    background-color: #fffba4;
+    background-color: #e9e9e9;
 }
 
 .table > tbody > tr.success > td, .table > tbody > tr.success > th, .table > tbody > tr > td.success, .table > tbody > tr > th.success, .table > tfoot > tr.success > td, .table > tfoot > tr.success > th, .table > tfoot > tr > td.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > thead > tr.success > th, .table > thead > tr > td.success, .table > thead > tr > th.success {
-    background-color: #67bd6a
+    background-color: #67bd6a;
+    background-color: #57d59f;
 }
 
 .table-hover > tbody > tr.success:hover > td, .table-hover > tbody > tr.success:hover > th, .table-hover > tbody > tr:hover > .success, .table-hover > tbody > tr > td.success:hover, .table-hover > tbody > tr > th.success:hover {
-    background-color: #55b559
+    background-color: #55b559;
+    background-color: #43d093;
 }
 
 .table > tbody > tr.info > td, .table > tbody > tr.info > th, .table > tbody > tr > td.info, .table > tbody > tr > th.info, .table > tfoot > tr.info > td, .table > tfoot > tr.info > th, .table > tfoot > tr > td.info, .table > tfoot > tr > th.info, .table > thead > tr.info > td, .table > thead > tr.info > th, .table > thead > tr > td.info, .table > thead > tr > th.info {
-    background-color: #d9edf7
+    background-color: #d9edf7;
+    background-color: #2ebcfc;
 }
 
 .table-hover > tbody > tr.info:hover > td, .table-hover > tbody > tr.info:hover > th, .table-hover > tbody > tr:hover > .info, .table-hover > tbody > tr > td.info:hover, .table-hover > tbody > tr > th.info:hover {
-    background-color: #c4e3f3
+    background-color: #c4e3f3;
+    background-color: #14b4fc;
 }
 
 .table > tbody > tr.warning > td, .table > tbody > tr.warning > th, .table > tbody > tr > td.warning, .table > tbody > tr > th.warning, .table > tfoot > tr.warning > td, .table > tfoot > tr.warning > th, .table > tfoot > tr > td.warning, .table > tfoot > tr > th.warning, .table > thead > tr.warning > td, .table > thead > tr.warning > th, .table > thead > tr > td.warning, .table > thead > tr > th.warning {
-    background-color: #ffa829
+    background-color: #ffa829;
+    background-color: #f6d05a;
 }
 
 .table-hover > tbody > tr.warning:hover > td, .table-hover > tbody > tr.warning:hover > th, .table-hover > tbody > tr:hover > .warning, .table-hover > tbody > tr > td.warning:hover, .table-hover > tbody > tr > th.warning:hover {
-    background-color: #ff9e0f
+    background-color: #ff9e0f;
+    background-color: #f5c942;
 }
 
 .table > tbody > tr.danger > td, .table > tbody > tr.danger > th, .table > tbody > tr > td.danger, .table > tbody > tr > th.danger, .table > tfoot > tr.danger > td, .table > tfoot > tr.danger > th, .table > tfoot > tr > td.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > thead > tr.danger > th, .table > thead > tr > td.danger, .table > thead > tr > th.danger {
-    background-color: #f6675d
+    background-color: #f6675d;
+    background-color: #ff8482;
 }
 
 .table-hover > tbody > tr.danger:hover > td, .table-hover > tbody > tr.danger:hover > th, .table-hover > tbody > tr:hover > .danger, .table-hover > tbody > tr > td.danger:hover, .table-hover > tbody > tr > th.danger:hover {
-    background-color: #f55145
+    background-color: #f55145;
+    background-color: #ff6b68;
 }
 
 .table-responsive {
@@ -198,4 +208,50 @@ table td[class*=col-], table th[class*=col-] {
 
 .table-responsive {
     border: 0
+}
+
+
+
+.thead-default th {
+    color: #464a4c;
+    background-color: #f6f6f6;
+}
+.table-inverse th, .table-inverse td, .table-inverse thead th {
+    border-color: #f3f3f3;
+}
+.table-inverse th, .table-inverse td, .table-inverse thead th {
+    border-color: #505b63;
+}
+.table-sm th, .table-sm td {
+    padding: 0.75rem 1rem;
+}
+.table-active, .table-active > th, .table-active > td {
+    background-color: #f6f6f6;
+}
+.table-hover .table-active:hover {
+    background-color: #e9e9e9;
+}
+.table-success, .table-success > th, .table-success > td {
+    background-color: #57d59f;
+}
+.table-hover .table-success:hover {
+    background-color: #43d093;
+}
+.table-info, .table-info > th, .table-info > td {
+    background-color: #2ebcfc;
+}
+.table-hover .table-info:hover {
+    background-color: #14b4fc;
+}
+.table-warning, .table-warning > th, .table-warning > td {
+    background-color: #f6d05a;
+}
+.table-hover .table-warning:hover {
+    background-color: #f5c942;
+}
+.table-danger, .table-danger > th, .table-danger > td {
+    background-color: #ff8482;
+}
+.table-hover .table-danger:hover {
+    background-color: #ff6b68;
 }
